libproxy: fix handling of SOCKS in async API, add tests

Fix the handling of SOCKS proxies with g_proxy_resolver_lookup_async()
and the libproxy resolver. (Also, make the sync proxy resolver
properly cancellable.)

Add some tests of the libproxy resolver, based on the existing gnome
proxy resolver tests. Unfortunately, libproxy doesn't implement ignore
hosts in exactly the same way GProxyResolverGnome does, so we need to
keep track of which URIs they give different results for...

https://bugzilla.gnome.org/show_bug.cgi?id=699359